plugins {
    id 'java'
    id 'org.graalvm.buildtools.native' version '0.10.2'
    id 'org.jetbrains.kotlin.jvm' version '2.0.20'
    id 'org.jlleitschuh.gradle.ktlint' version '12.1.1'

    id 'org.springframework.boot' version '3.3.3'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'org.jetbrains.kotlin.plugin.spring' version '2.0.20'
    id 'org.jetbrains.kotlin.plugin.jpa' version '2.0.20'
}

group = 'com.pps.demo'
version = '1.0-SNAPSHOT'

graalvmNative {
    binaries {
        main {
            buildArgs.add('--enable-preview')
        }
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.kafka:spring-kafka'

    implementation 'org.jetbrains.kotlin:kotlin-reflect:2.0.20' // required by SpringApplicationAotProcessor
    implementation 'com.fasterxml.jackson.core:jackson-databind' // required by Spring Kafka
    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'

    implementation 'org.flywaydb:flyway-database-postgresql'
    implementation 'org.postgresql:postgresql'

    testImplementation 'org.jetbrains.kotlin:kotlin-test'
    testImplementation platform('org.junit:junit-bom:5.11.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation'org.springframework.boot:spring-boot-starter-test'
}

test {
    useJUnitPlatform()
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    toolchain { languageVersion = JavaLanguageVersion.of(21) }
}

kotlin {
    sourceCompatibility = JavaVersion.VERSION_21
    jvmToolchain(21)
}